ionos/dome-wallet/wallet-user-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-user-registry
  name: wallet-user-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-user-registry
      app.kubernetes.io/name: wallet-user-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-user-registry
        app.kubernetes.io/name: wallet-user-registry
    spec:
      containers:
      - name: wallet-user-registry
        image: in2kizuna/wallet-user-registry:v2.0.0
        imagePullPolicy: Always
