ionos/dome-wallet/wallet-user-registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-user-registry
spec:
  ports:
  - name: wallet-user-registry
    port: 8080
  selector:
    app.kubernetes.io/name: wallet-user-registry
